Project setup was finished
